--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,67 +1,35 @@
-@font-face {
-  font-family: "ColfaxAI";
-  src: url(https://cdn.openai.com/API/fonts/ColfaxAIRegular.woff2)
-      format("woff2"),
-    url(https://cdn.openai.com/API/fonts/ColfaxAIRegular.woff) format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "ColfaxAI";
-  src: url(https://cdn.openai.com/API/fonts/ColfaxAIBold.woff2) format("woff2"),
-    url(https://cdn.openai.com/API/fonts/ColfaxAIBold.woff) format("woff");
-  font-weight: bold;
-  font-style: normal;
-}
 .main,
 .main input {
-  font-size: 16px;
-  line-height: 24px;
-  color: #353740;
-  font-family: "ColfaxAI", Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
 }
 .main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 60px;
+  padding: 2em;
+  max-width: 700px;
 }
-.main .icon {
-  width: 34px;
-}
-.main h3 {
-  font-size: 32px;
-  line-height: 40px;
-  font-weight: bold;
-  color: #202123;
-  margin: 16px 0 40px;
-}
-.main form {
-  display: flex;
-  flex-direction: column;
-  width: 320px;
-}
-.main input[type="text"] {
+.main textarea {
   padding: 12px 16px;
+  box-sizing: border-box;
   border: 1px solid #10a37f;
+  width: 100%;
+  height: 100px;
   border-radius: 4px;
-  margin-bottom: 24px;
-  outline-color: #10a37f;
-}
-.main ::placeholder {
-  color: #8e8ea0;
-  opacity: 1;
 }
 .main input[type="submit"] {
-  padding: 12px 0;
+  margin-top: 0.5em;
+  padding: 12px 12px;
   color: #fff;
   background-color: #10a37f;
   border: none;
   border-radius: 4px;
-  text-align: center;
   cursor: pointer;
 }
+.main input[type="submit"]:hover {
+  background-color: #20b39f;
+}
+.main input[type="submit"]:disabled {
+  background-color: #aaa;
+  cursor: initial;
+}
 .main .result {
-  font-weight: bold;
   margin-top: 40px;
 }
